# graphql-utils

./: .gitignore  .mergify.yml  README.rst  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
graphql_utils/: multi.py
graphql_utils/tests/: test_multi.py
