[metadata]
name = graphql-utils
description = Useful function when interacting with GraphQL APIs
long_description = file: README.rst
author = Mergify
license = BSD 3-Clause License
url = https://github.com/Mergifyio/graphql-utils
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:

[options.extras_require]
test =
    pytest
    pytest-asyncio
